--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ h4 {
     text-align:center;
 }
 
+#register button {
+	margin:10px;
+}
+
 #paymentsection input {
     max-width:75px;
 }
@@ -36,4 +40,8 @@ h4 {
 
 .center {
     text-align:center;
+}
+
+.hide {
+	display:none;
 }
