Many changes, including implementing school search functionality. Changes to be committed: 	renamed:    style.css -> css/style.css 	renamed:    logo.png -> images/logo.png 	modified:   index.php 	renamed:    actm.js -> js/actm.js 	new file:   js/typeahead.js 	modified:   submission.php 	modified:   template/header.php

--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,17 @@
     text-align:center;
 }
 
+#logo {
+	width:100px;
+}
+
 h3 {
     color:#05388B;
 }
 
 h4 {
     color:#05388B;
+    margin-top:20px;
 }
 
 #register {
